首页页面修改

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,6 @@
 <link rel="stylesheet" href="/stylesheets/font-awesome.min.css">
 <script src="/javascripts/jquery.min.js"></script>
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<link href='http://fonts.useso.com/css?family=Source+Sans+Pro:200,300,400,600,700,900' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <div class="header">
@@ -23,7 +22,7 @@
         <li><a href="users/reg">注册</a></li>
         <div class="clear"></div>
       </ul>
-      <script type="text/javascript" src="js/responsive-nav.js"></script>
+      <script type="text/javascript" src="/javascripts/responsive-nav.js"></script>
     </div>
   </div>
 </div>
@@ -32,7 +31,7 @@
     <div class="banner-info">
       <h1>博士直通车平台</h1>
       <p>博士直通车是一个基于博士为基础，前任为标杆，院士为旗帜的博士学术上升通道，也是博士价值释放到企业和社会的高速通道，更是跨专业博士交流合作创新平台......</p>
-      <a class="banner_btn" href="about.html">阅读更多</a> </div>
+      <a class="banner_btn" href="/about">阅读更多</a> </div>
   </div>
 </div>
 <div class="main">
@@ -44,10 +43,10 @@
         <div class="block-heading-two">
           <h2><span>公司简介</span></h2>
         </div>
-        <p>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero.</p>
+        <p>广州中青博信息科技有限公司我公司具体地址位于广州市白云区马岗浅水路10号201房,欢迎各位新老客户来我公司参观指导工作，，联系电话为13570542017，您如果对我们的产品感兴趣或者有任何的疑问，您可以直接给我们留言或直接与我们联络，我们将在收到您的信息后，会第一时间及时与您联络。，联系移动电话为13570542017，我公司于2015年注册成立，在公司发展壮大的2年里，我们始终坚持用户至上，坚持用自己的服务去打动客户 ，自广州中青博信息科技有限公司创建以来，坚持“诚信为本，客户至上”的宗旨，本着“品质为本，精益求精”的经营销售理念，力求给客户提供全方位优质服务的同时，也使企业得到长足的发展。期待与各位业界新老客户携手共进，共创辉煌。</p>
         <br>
-        <p>Sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
-        <a class="banner_btn" href="about.html">阅读更多</a> </div>
+        <p>公司致力于打造“企业-博士”直通平台，一方面服务于青年博士的创新创业和成长成才，另一方面帮助企业解决实际生产需求。公司提出“为所用，不为所有”的理念，发挥青年科研人员的业余时间价值，帮助企业发展。现已为数十家标杆企业提供智力支持和项目合作，涉及机械制造、新材料、电气自动化、医疗器械、企业战略等若干领域，实现博士科研成果的快速、高价转化。</p>
+        <a class="banner_btn" href="/about">阅读更多</a> </div>
     </div>
   </div>
 </div>
@@ -55,11 +54,11 @@
 <div class="footer">
   <div class="footer_bottom">
     <div class="copy">
-      <p>Copyright &copy; 2015 Company Name. More Templates <a href="/" target="_blank" title="模板之家">博士直通车</a> </p>
+      <p>Copyright &copy; 2015 广州中青博信息科技有限公司. Powered By <a href="/" target="_blank" title="博士直通车">博士直通车</a> </p>
     </div>
   </div>
 </div>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.flexslider.js"></script>
+<script src="/javascripts/bootstrap.min.js"></script>
+<script src="/javascripts/jquery.flexslider.js"></script>
 </body>
 </html>
