--- a/views/about.ejs
+++ b/views/about.ejs
@@ -8,9 +8,8 @@
 <link href="/stylesheets/flexslider.css" rel="stylesheet" />
 <link href="/stylesheets/style1.css" rel="stylesheet" />
 <link rel="stylesheet" href="/stylesheets/font-awesome.min.css">
-<script src="js/jquery.min.js"></script>
+<script src="/javascripts/jquery.min.js"></script>
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); }</script>
-<link href='http://fonts.useso.com/css?family=Source+Sans+Pro:200,300,400,600,700,900' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <div class="header">
@@ -47,11 +46,31 @@
   </div>
 </div>
 
+<div class="highlight-info">
+  <div class="overlay spacer">
+    <div class="container">
+      <div class="row text-center">
+        <div class="col-sm-3 col-xs-6"> <i class="fa fa-smile-o fa-5x"></i>
+          <h4>120+ Happy Clients</h4>
+        </div>
+        <div class="col-sm-3 col-xs-6"> <i class="fa fa-check-square-o fa-5x"></i>
+          <h4>600+ Projects Completed</h4>
+        </div>
+        <div class="col-sm-3 col-xs-6"> <i class="fa fa-trophy fa-5x"></i>
+          <h4>25 Awards Won</h4>
+        </div>
+        <div class="col-sm-3 col-xs-6"> <i class="fa fa-map-marker fa-5x"></i>
+          <h4>3 Offices</h4>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="footer">
   <div class="footer_bottom">
-    <div class="follow-us"> <a class="fa fa-facebook social-icon" href="#"></a> <a class="fa fa-twitter social-icon" href="#"></a> <a class="fa fa-linkedin social-icon" href="#"></a> <a class="fa fa-google-plus social-icon" href="#"></a> </div>
     <div class="copy">
-      <p>Copyright &copy; 2015 Company Name. More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p>
+      <p>Copyright &copy; 2015 广州中青博信息科技有限公司. Powered By <a href="/" target="_blank" title="博士直通车">博士直通车</a> </p>
     </div>
   </div>
 </div>
