--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -33,19 +33,19 @@
     </section>
   </div>
 </div>
-<div class="contact">
+<div class="contact" style="padding-bottom: 100px;padding-top: 60px;">
   <div class="container">
     <div class="row contact_top">
-      <div class="col-md-4 contact_details">
+      <div class="col-md-12 contact_details">
         <h5>地址:</h5>
         <div class="contact_address">广州市白云区马岗浅水路10号201房</div>
       </div>
-      <div class="col-md-4 contact_details">
+      <div class="col-md-12 contact_details">
         <h5>电话:</h5>
         <div class="contact_address"> 135 7054 2017<br>
         </div>
       </div>
-      <div class="col-md-4 contact_details">
+      <div class="col-md-12 contact_details">
         <h5>邮箱:</h5>
         <div class="contact_mail"> info@companyname.com</div>
       </div>
@@ -55,13 +55,12 @@
 </div>
 <div class="footer">
   <div class="footer_bottom">
-    <div class="follow-us"> <a class="fa fa-facebook social-icon" href="#"></a> <a class="fa fa-twitter social-icon" href="#"></a> <a class="fa fa-linkedin social-icon" href="#"></a> <a class="fa fa-google-plus social-icon" href="#"></a> </div>
     <div class="copy">
-      <p>Copyright &copy; 2015 Company Name. More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p>
+      <p>Copyright &copy; 2015 广州中青博信息科技有限公司. Powered By <a href="/" target="_blank" title="博士直通车">博士直通车</a> </p>
     </div>
   </div>
 </div>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.flexslider.js"></script>
+<script src="/javascripts/bootstrap.min.js"></script>
+<script src="/javascripts/jquery.flexslider.js"></script>
 </body>
 </html>
