--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -15,6 +15,8 @@
 
   <h2 class="page-title">用心中心</h2>
 
+
+
   <div class="wrap">
     <div class="content">
 
@@ -24,14 +26,16 @@
 
       <div class="fly-tab user-tab">
         <span id="LAY-mine">
-          <a href="javascript:;" class="tab-this" type="mine-jie">我的求解（<cite>0</cite>）</a>
-          <a href="/users/message">我的消息</a>
-          <a href="/wisdom/mywishdom">我的智库</a>
+          <a href="javascript:;" class="tab-this"  hash='myreply'>我的求解（<cite>0</cite>）</a>
+          <a href="javascript:;" hash='mynews'>我的消息</a>
+          <a href="javascript:;" hash='mywisdom'>我的智库</a>
           <a href="/users/home?uid=<%= uid %>">我的主页</a>
         </span>
       </div>
       <div class="user-mine">
-        <ul class="mine-view jie-row" style="display:block;"></ul>
+        <div class="layui-form layui-form-pane mine-view">1</div>
+        <div class="layui-form layui-form-pane mine-view">2</div>
+        <div class="layui-form layui-form-pane mine-view">3</div>
       </div>
       <div id="LAY-page"></div>
     </div>
@@ -68,32 +72,6 @@
 
       </p>
 
-      <div class="user-looklog" style="padding-bottom:200px;">
-        <h3>最近访客</h3>
-        <span>
-          <a href="/u/168">
-            <img src="#">
-            <cite>贤心</cite>
-            <i>刚刚</i>
-          </a>
-          <a href="/u/336">
-            <img src="#">
-            <cite>Fly官方</cite>
-            <i>5分钟前</i>
-          </a>
-          <a href="/u/26880">
-            <img src="#">
-            <cite>小付</cite>
-            <i>1小时前</i>
-          </a>
-          <a href="/u/11928">
-            <img src="#">
-            <cite>第一把菜刀</cite>
-            <i>3天前</i>
-          </a>
-
-        </span>
-      </div>
     </div>
   </div>
 </div>
