--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,13 +1,8 @@
 
 <div class="footer">
-  <p><a href="#">博士直通车</a> 2017 &copy; <a href="#">bsztc.com</a></p>
-  <p>
-    <a href="#" target="_blank">产品授权</a>
-    <a href="#" target="_blank">VIP说明</a>
-    <a href="#" target="_blank">商务合作</a>
-    <a href="#" target="_blank" rel="nofollow">微博</a>
-    <a href="#" target="_blank">微信公众号</a>
-  </p>
+  <p><a href="/" target="_blank" title="博士直通车">博士直通车</a> 人才与企业交流平台 </p>
+  <p>Copyright &copy; 2015 广州中青博信息科技有限公司. All Rights Reserved. </p>
+  <p>广州中青博信息科技有限公司 版权所有<p>
 </div>
 
 <script src="/res/layui/layui.js"></script>
@@ -26,4 +21,5 @@ layui.config({
 }).extend({
   fly: 'index'
 }).use('fly');
+
 </script>
