--- a/views/topic/detail.ejs
+++ b/views/topic/detail.ejs
@@ -8,44 +8,6 @@
 
 <%- include("../link.ejs") %>
 <script  src="/javascripts/time_conversion.js"></script>
-<script>
-layui.use(['layer','jquery','fly'],function(){
-  var $ = layui.jquery, layer = layui.layer;
-  $.post(
-    "/topic/getReply",
-    {
-      postId: '<%= post[0].get('objectId') %>'
-    },
-    function(data){
-      var length = data.length;
-      console.log(data);
-      for(var i=0;i<1;i++){
-        var string = '';
-        string += '<li data-id="14">';
-        string += '<a name=""></a>';
-        string += '<div class="detail-about detail-about-reply">';
-        string += '<a class="jie-user" href="">';
-        string += '<img src="../../res/images/avatar/default.png" alt="">';
-        string += '<cite><i>香菇</i><em style="color:#FF9E3F">活雷锋</em></cite></a>';
-        string += '<div class="detail-hits"><span>刚刚</span></div>';
-        string += '</div>';
-        string += '<div class="detail-body jieda-body"><p>蓝瘦</p></div>';
-        string += '<div class="jieda-reply">';
-        string += '<span class="jieda-zan" type="zan"><i class="iconfont icon-zan"></i><em>0</em></span>';
-        string += '<span type="reply"><i class="iconfont icon-svgmoban53"></i>回复</span>';
-        string += '<div class="jieda-admin">';
-        string += '<span type="edit">编辑</span>';
-        string += '<span type="del">删除</span>';
-        string += '<span class="jieda-accept" type="accept">采纳</span>';
-        string += '</div>';
-        string += '</div>';
-        string += '</li>';
-        $("#reply").append(string);
-      }
-    }
-  )
-})
-</script>
 </head>
 <body>
 
@@ -215,7 +177,33 @@ layui.use(['layer','jquery','fly'],function(){
             </div> -->
           </div>
         </li>
-
+      <li data-id="13">
+          <a name="item-121212121212"></a>
+          <div class="detail-about detail-about-reply">
+            <a class="jie-user" href="">
+              <img src="../../res/images/avatar/default.png" alt="">
+              <cite>
+                <i>香菇</i>
+                <em style="color:#FF9E3F">活雷锋</em>
+              </cite>
+            </a>
+            <div class="detail-hits">
+              <span>刚刚</span>
+            </div>
+          </div>
+          <div class="detail-body jieda-body">
+            <p>蓝瘦</p>
+          </div>
+          <div class="jieda-reply">
+            <span class="jieda-zan" type="zan"><i class="iconfont icon-zan"></i><em>0</em></span>
+            <span type="reply"><i class="iconfont icon-svgmoban53"></i>回复</span>
+            <div class="jieda-admin">
+              <span type="edit">编辑</span>
+              <span type="del">删除</span>
+              <span class="jieda-accept" type="accept">采纳</span>
+            </div>
+          </div>
+        </li>
       </ul>
 
       <div class="layui-form layui-form-pane">
@@ -288,7 +276,39 @@ layui.use(['layer','jquery','fly'],function(){
     }
   )
 
-
+  $.post(
+    "/topic/getReply",
+    {
+      postId: '<%= post[0].get('objectId') %>'
+    },
+    function(data){
+      var length = data.length;
+      console.log(data);
+      for(var i=0;i<1;i++){
+        var string = '';
+        string += '<li data-id="14">';
+        string += '<a name=""></a>';
+        string += '<div class="detail-about detail-about-reply">';
+        string += '<a class="jie-user" href="">';
+        string += '<img src="../../res/images/avatar/default.png" alt="">';
+        string += '<cite><i>香菇</i><em style="color:#FF9E3F">活雷锋</em></cite></a>';
+        string += '<div class="detail-hits"><span>刚刚</span></div>';
+        string += '</div>';
+        string += '<div class="detail-body jieda-body"><p>蓝瘦</p></div>';
+        string += '<div class="jieda-reply">';
+        string += '<span class="jieda-zan" type="zan"><i class="iconfont icon-zan"></i><em>0</em></span>';
+        string += '<span type="reply"><i class="iconfont icon-svgmoban53"></i>回复</span>';
+        string += '<div class="jieda-admin">';
+        string += '<span type="edit">编辑</span>';
+        string += '<span type="del">删除</span>';
+        string += '<span class="jieda-accept" type="accept">采纳</span>';
+        string += '</div>';
+        string += '</div>';
+        string += '</li>';
+        $("#reply").append(string);
+      }
+    }
+  )
 
 
     // var fly = layui.fly;
