--- a/views/topic/index.ejs
+++ b/views/topic/index.ejs
@@ -25,7 +25,6 @@
           <a href="jie/index.html">未结帖</a>
           <a href="jie/index.html">已采纳</a>
           <a href="jie/index.html">精帖</a>
-          <a href="user/index.html">我的帖</a>
         </span>
         <form action="http://cn.bing.com/search" class="fly-search">
           <i class="iconfont icon-sousuo"></i>
@@ -34,6 +33,8 @@
         <a href="topic/add" class="layui-btn jie-add">发布问题</a>
       </div>
 
+      <ul class="fly-list" id="isTop"></ul>
+      <hr>
 
       <ul class="fly-list">
         <% posts.forEach(function(post){ %>
@@ -43,9 +44,9 @@
           </a>
           <h2 class="fly-tip">
             <a href="topic/detail?qId=<%= post.get('objectId') %>"><%= post.get('title') %></a>
-            <% if( post.get('recommend')==1 ){ %>
+            <% if( post.get('isTop')==1 ){ %>
             <span class="fly-tip-stick">置顶</span>
-            <% } if( post.get('status')==1 ){ %>
+            <% } if( post.get('recommend')==1 ){ %>
             <span class="fly-tip-jing">精帖</span>
             <% } %>
           </h2>
@@ -136,6 +137,35 @@ layui.use(['layer','jquery'],function(){
         string += '<li><a href="/topic/detail?qId='+data[i].objectId+'">'+ data[i].title +'</a>';
         string += '<span><i class="iconfont">&#xe60c;</i> '+ data[i].consultations +'</span></li>';
         $("#mostConsultations").append(string);
+      }
+    }
+  )
+
+  $.get(
+    "/topic/getIsTop",
+    function(data){
+      var length = data.length;
+      for(var i=0;i<length;i++){
+        var string = '';
+        string += '<li class="fly-list-li">';
+        string += '<a href="users/home?uid='+data[i].questionerId+'" class="fly-list-avatar"><img src='+data[i].questionerAvatar+' alt=""></a>';
+        string += '<h2 class="fly-tip">';
+        string += '<a href="topic/detail?qId='+data[i].objectId+'">'+data[i].title+'</a>';
+        if(data[i].isTop==1){
+          string += '<span class="fly-tip-stick">置顶</span>';
+        }
+        if(data[i].recommend==1){
+          string += '<span class="fly-tip-jing">精帖</span>';
+        }
+        string += '</h2>';
+        string += '<p><span><a href="users/home?uid='+data[i].questionerId+'">'+data[i].questionerNickName+'</a></span>';
+        string += '<span>'+getDateDiff(data[i].createdAt)+'</span>';
+        console.log(data[i].createdAt);
+        string += '<span>'+data[i].topicClass+'</span>';
+        string += '<span class="fly-list-hint">';
+        string += '<i class="iconfont" title="回答">&#xe60c;</i> '+data[i].consultations;
+        string += '<i class="iconfont" title="人气">&#xe60b;</i> '+data[i].visits+'</span></p></li>';
+        $("#isTop").append(string);
       }
     }
   )
