--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -35,7 +35,9 @@
       <div class="user-mine">
         <div class="layui-form layui-form-pane mine-view">1</div>
         <div class="layui-form layui-form-pane mine-view">2</div>
-        <div class="layui-form layui-form-pane mine-view">3</div>
+        <div class="layui-form layui-form-pane mine-view">
+
+        </div>
       </div>
       <div id="LAY-page"></div>
     </div>
