支付和聊天系统demo

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -6,6 +6,7 @@
 </div>
 
 <script src="/res/layui/layui.js"></script>
+<script src="/javascripts/layim.js"></script>
 <script>
 layui.cache.page = 'user';
 layui.cache.user = {
