--- a/views/header.ejs
+++ b/views/header.ejs
@@ -21,7 +21,7 @@
 
       <% } else { %>
         <a class="avatar" href="/users/index">
-          <img src= <%= avatar %> >
+          <img id='header_avatar' src= <%= avatar %> >
           <cite><%= user %></cite>
           <i><%= identity %></i>
         </a>
