网页信息修改

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>One | About Us</title>
+<title>关于我们</title>
 <link href="/stylesheets/bootstrap.min.css" rel="stylesheet" />
 <link href="/stylesheets/flexslider.css" rel="stylesheet" />
 <link href="/stylesheets/style1.css" rel="stylesheet" />
@@ -29,7 +29,7 @@
 <div class="about">
   <div class="container">
     <section class="title-section">
-      <h1 class="title-header">About Our Company</h1>
+      <h1 class="title-header">关于我们</h1>
     </section>
   </div>
 </div>
@@ -37,9 +37,16 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12"> <img src="/res/images/a2.jpg" class="img-responsive" alt=""/>
-        <p>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero.</p>
+        <p>广州中青博信息科技有限公司（简称：中青博，上海股交中心挂牌上市，股权代码：208290），是一家全球性的博士资源整合运营机构。秉承“服务博士，服务企业，服务社会”的组织文化，以“成就博士梦想、促进企业发展、推动社会进步、实现中华复兴”为组织使命，充分凝聚国内外博士、院士的智慧，整合高等院校、科研院所等教育和科研高端资源，在区域、产业、企业共建博士服务站，把博士、专家的创新智慧凝聚到实施“转型升级和创新驱动” 发展战略中，为区域、产业、企业和社会组织等提供定制式的人才、科技、管理、文化、生态等专业服务。</p>
         <br>
-        <p>Sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero.</p>
+        <p>基于中国“转型升级和创新驱动”的市场需求，利用互联网技术，结合“中青博”自身人才优势，开发出“博士直通车”这一专为博士服务的互联网应用“智造”平台。“博士直通车”是博士们专业研究成果和专利展示平台，有两个主要功能：其一，在线咨询，实现客户与博士就专业问题开展一对一电话咨询服务；其二，项目对接，对接有两个方向，博士的专利和研究成果与企业对接转化，针对企业的个性化需求以项目的方式组建博士服务团或博士服务站。“博士直通车”完成线上全专业博士资源整合和需求对接，博士服务站落实对接项目线下实施，真正实现基于项目的“博士+企业”无缝对接，双向互动网络化的O2O发展模式。</p>
+        <br>
+        <p>“博士直通车”目前认证的博士会员人数超过8000人，基本形成以博士为基础，千人专家为标杆，院士为旗帜的高端人才梯队。“博士直通车”为博士学术提升打开了一条向上的学术通道，也为博士价值释放打通了一条向下的市场通道，还为企业可持续性发展提供一个系统化、专业化的博士智库。
+欢迎各位博士和企业家乘坐博士直通车，共建博士服务站，让我们一起走得更快、更远、更久！</p>
+        <br>
+        <p>“博士直通车”已经从南海发车，必将贯通南北，驶向世界！</p>
+        <br>
+        <p>朋友们，让我们一起参与，共同建设一个：共享博士智慧的美好世界！</p>
       </div>
 
     </div>
@@ -51,16 +58,16 @@
     <div class="container">
       <div class="row text-center">
         <div class="col-sm-3 col-xs-6"> <i class="fa fa-smile-o fa-5x"></i>
-          <h4>120+ Happy Clients</h4>
+
         </div>
         <div class="col-sm-3 col-xs-6"> <i class="fa fa-check-square-o fa-5x"></i>
-          <h4>600+ Projects Completed</h4>
+
         </div>
         <div class="col-sm-3 col-xs-6"> <i class="fa fa-trophy fa-5x"></i>
-          <h4>25 Awards Won</h4>
+
         </div>
         <div class="col-sm-3 col-xs-6"> <i class="fa fa-map-marker fa-5x"></i>
-          <h4>3 Offices</h4>
+          
         </div>
       </div>
     </div>
