--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -38,11 +38,11 @@
     <div class="row contact_top">
       <div class="col-md-12 contact_details">
         <h5>地址:</h5>
-        <div class="contact_address">广州市白云区马岗浅水路10号201房</div>
+        <div class="contact_address">广州市天河区翰景路1号金星大厦501号F08房</div>
       </div>
       <div class="col-md-12 contact_details">
         <h5>电话:</h5>
-        <div class="contact_address"> 135 7054 2017<br>
+        <div class="contact_address"> 180 2860 1339（王博士）<br>
         </div>
       </div>
       <div class="col-md-12 contact_details">
