--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,9 +43,10 @@
         <div class="block-heading-two">
           <h2><span>公司简介</span></h2>
         </div>
-        <p>广州中青博信息科技有限公司我公司具体地址位于广州市白云区马岗浅水路10号201房,欢迎各位新老客户来我公司参观指导工作，，联系电话为13570542017，您如果对我们的产品感兴趣或者有任何的疑问，您可以直接给我们留言或直接与我们联络，我们将在收到您的信息后，会第一时间及时与您联络。，联系移动电话为13570542017，我公司于2015年注册成立，在公司发展壮大的2年里，我们始终坚持用户至上，坚持用自己的服务去打动客户 ，自广州中青博信息科技有限公司创建以来，坚持“诚信为本，客户至上”的宗旨，本着“品质为本，精益求精”的经营销售理念，力求给客户提供全方位优质服务的同时，也使企业得到长足的发展。期待与各位业界新老客户携手共进，共创辉煌。</p>
+        <p>广州中青博信息科技有限公司（简称：中青博，上海股交中心挂牌上市，股权代码：208290），是一家全球性的博士资源整合运营机构。秉承“服务博士，服务企业，服务社会”的组织文化，以“成就博士梦想、促进企业发展、推动社会进步、实现中华复兴”为组织使命，充分凝聚国内外博士、院士的智慧，整合高等院校、科研院所等教育和科研高端资源，在区域、产业、企业共建博士服务站，把博士、专家的创新智慧凝聚到实施“转型升级和创新驱动” 发展战略中，为区域、产业、企业和社会组织等提供定制式的人才、科技、管理、文化、生态等专业服务。</p>
         <br>
-        <p>公司致力于打造“企业-博士”直通平台，一方面服务于青年博士的创新创业和成长成才，另一方面帮助企业解决实际生产需求。公司提出“为所用，不为所有”的理念，发挥青年科研人员的业余时间价值，帮助企业发展。现已为数十家标杆企业提供智力支持和项目合作，涉及机械制造、新材料、电气自动化、医疗器械、企业战略等若干领域，实现博士科研成果的快速、高价转化。</p>
+        <p>基于中国“转型升级和创新驱动”的市场需求，利用互联网技术，结合“中青博”自身人才优势，开发出“博士直通车”这一专为博士服务的互联网应用“智造”平台。“博士直通车”是博士们专业研究成果和专利展示平台，有两个主要功能：其一，在线咨询，实现客户与博士就专业问题开展一对一电话咨询服务；其二，项目对接，对接有两个方向，博士的专利和研究成果与企业对接转化，针对企业的个性化需求以项目的方式组建博士服务团或博士服务站......</p>
+
         <a class="banner_btn" href="/about">阅读更多</a> </div>
     </div>
   </div>
@@ -54,7 +55,7 @@
 <div class="footer">
   <div class="footer_bottom">
     <div class="copy">
-      <p>Copyright &copy; 2015 广州中青博信息科技有限公司. Powered By <a href="/" target="_blank" title="博士直通车">博士直通车</a> </p>
+      <p>Copyright &copy; 2017 广州中青博信息科技有限公司. Powered By <a href="/" target="_blank" title="博士直通车">博士直通车</a> </p>
     </div>
   </div>
 </div>
