--- a/views/topic/index.ejs
+++ b/views/topic/index.ejs
@@ -21,10 +21,10 @@
     <div class="content">
       <div class="fly-tab">
         <span>
-          <a href="topic/total">全部</a>
-          <a href="topic/unsolved">未结帖</a>
-          <a href="topic/solved">已采纳</a>
-          <a href="topic/excellent">精帖</a>
+          <a href="topic/total/page/1">全部</a>
+          <a href="topic/unsolved/page/1">未结帖</a>
+          <a href="topic/solved/page/1">已采纳</a>
+          <a href="topic/excellent/page/1">精帖</a>
         </span>
         <form action="http://cn.bing.com/search" class="fly-search">
           <i class="iconfont icon-sousuo"></i>
