--- a/views/topic/post.ejs
+++ b/views/topic/post.ejs
@@ -21,9 +21,9 @@
           <a href="/topic/solved/page/1" <% if(title=="已采纳"){ %> class="tab-this" <% } %> >已采纳</a>
           <a href="/topic/excellent/page/1" <% if(title=="精帖"){ %> class="tab-this" <% } %> >精帖</a>
         </span>
-        <form action="http://cn.bing.com/search" class="fly-search">
+        <form action="/search" class="fly-search">
           <i class="iconfont icon-sousuo"></i>
-          <input class="layui-input" autocomplete="off" placeholder="搜索内容，回车跳转" type="text" name="q">
+          <input class="layui-input" autocomplete="off" placeholder="搜索内容，回车跳转" type="text" name="keyword">
         </form>
         <a href="add.html" class="layui-btn jie-add">发布问题</a>
       </div>
