--- a/views/search/topic-result.ejs
+++ b/views/search/topic-result.ejs
@@ -15,17 +15,9 @@
   <div class="wrap">
     <div class="content" style="margin-right:0">
       <div class="fly-tab">
-        <span>
-          <a href="/topic/total/page/1" <% if(title=="全部"){ %> class="tab-this" <% } %> >全部</a>
-          <a href="/topic/unsolved/page/1" <% if(title=="未结帖"){ %> class="tab-this" <% } %> >未结帖</a>
-          <a href="/topic/solved/page/1" <% if(title=="已采纳"){ %> class="tab-this" <% } %> >已采纳</a>
-          <a href="/topic/excellent/page/1" <% if(title=="精帖"){ %> class="tab-this" <% } %> >精帖</a>
-        </span>
-        <form action="http://cn.bing.com/search" class="fly-search">
-          <i class="iconfont icon-sousuo"></i>
-          <input class="layui-input" autocomplete="off" placeholder="搜索内容，回车跳转" type="text" name="q">
-        </form>
-        <a href="add.html" class="layui-btn jie-add">发布问题</a>
+        <fieldset class="layui-elem-field layui-field-title" style="margin-top: 50px;">
+          <legend>搜索结果如下：</legend>
+        </fieldset>
       </div>
 
       <ul class="fly-list">
@@ -44,7 +36,7 @@
             <% } %>
           </h2>
           <p>
-            <span><a href="user/home.html"><%= post.get('questionerNickName') %></a></span>
+            <span><a href="users/home?uid=<%= post.get('questionerId') %>"><%= post.get('questionerNickName') %></a></span>
             <script>
               var time = getDateDiff(<%= post.get('createdAt').getTime() %>);
               document.write("<span>" + time + "</span>");  // 输出语句
