发布问题的上传图片

--- a/views/topic/add.ejs
+++ b/views/topic/add.ejs
@@ -62,6 +62,8 @@
 </div>
 
 <%- include("../footer.ejs") %>
+<script src="http://cdn1.lncld.net/static/js/2.1.1/av-min.js"></script>
+<script src="/javascripts/initLeanCloud.js"></script>
 <script>
 layui.use(['jquery','layer'], function(){
   var layer = layui.layer
