--- a/views/users/set.ejs
+++ b/views/users/set.ejs
@@ -571,6 +571,10 @@ layui.use(['jquery','upload','layer'], function(){
     elem: '#idCardInHand' //指定原始元素，默认直接查找class="layui-upload-file"
     ,method: 'post' //上传接口的http类型
     ,before: function(input){
+      if(input.files[0].size>153600){
+        layer.msg("上传图片建议小于150K");
+        return ;
+      }
       var fileUploadControl = input;
       if (fileUploadControl.files.length > 0) {
         var localFile = fileUploadControl.files[0];
@@ -596,6 +600,10 @@ layui.use(['jquery','upload','layer'], function(){
     ,elem: '#idCardFront'
     ,method: 'post' //上传接口的http类型
     ,before: function(input){
+      if(input.files[0].size>153600){
+        layer.msg("上传图片建议小于150K");
+        return ;
+      }
       var fileUploadControl = input;
       if (fileUploadControl.files.length > 0) {
         var localFile = fileUploadControl.files[0];
@@ -620,6 +628,10 @@ layui.use(['jquery','upload','layer'], function(){
     ,elem: '#graduationCard' //指定原始元素，默认直接查找class="layui-upload-file"
     ,method: 'post' //上传接口的http类型
     ,before: function(input){
+      if(input.files[0].size>153600){
+        layer.msg("上传图片建议小于150K");
+        return ;
+      }
       var fileUploadControl = input;
       if (fileUploadControl.files.length > 0) {
         var localFile = fileUploadControl.files[0];
@@ -644,6 +656,10 @@ layui.use(['jquery','upload','layer'], function(){
     ,elem: '#bussinessLicenes' //指定原始元素，默认直接查找class="layui-upload-file"
     ,method: 'post' //上传接口的http类型
     ,before: function(input){
+      if(input.files[0].size>153600){
+        layer.msg("上传图片建议小于150K");
+        return ;
+      }
       var fileUploadControl = input;
       if (fileUploadControl.files.length > 0) {
         var localFile = fileUploadControl.files[0];
@@ -668,6 +684,10 @@ layui.use(['jquery','upload','layer'], function(){
     ,elem: '#bussinessLetter' //指定原始元素，默认直接查找class="layui-upload-file"
     ,method: 'post' //上传接口的http类型
     ,before: function(input){
+      if(input.files[0].size>153600){
+        layer.msg("上传图片建议小于150K");
+        return ;
+      }
       var fileUploadControl = input;
       if (fileUploadControl.files.length > 0) {
         var localFile = fileUploadControl.files[0];
