修改首页错字

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
   <div class="container">
     <div class="banner-info">
       <h1>博士直通车平台</h1>
-      <p>博士直通车是一个基于博士为基础，前任为标杆，院士为旗帜的博士学术上升通道，也是博士价值释放到企业和社会的高速通道，更是跨专业博士交流合作创新平台......</p>
+      <p>博士直通车是一个基于博士为基础，千人为标杆，院士为旗帜的博士学术上升通道，也是博士价值释放到企业和社会的高速通道，更是跨专业博士交流合作创新平台......</p>
       <a class="banner_btn" href="/about">阅读更多</a> </div>
   </div>
 </div>
