--- a/views/topic/detail.ejs
+++ b/views/topic/detail.ejs
@@ -80,6 +80,13 @@
       <h2 class="page-title">热忱回答<span><em id="replyCount"><%= post[0].get('consultations') %></em></span></h2>
 
       <ul class="jieda photos" id="reply">
+        <% if(replys.length>0){ %>
+          <% replys.forEach(function(reply){ %>
+            
+          <% } %>
+        <% }else{ %>
+          <li class="fly-none">没有任何回答</li>
+        <% } %>
         <!-- <li data-id="{{item.id}}" class="jieda-daan">
           <a name="item-{{item.time}}"></a>
           <div class="detail-about detail-about-reply">
@@ -143,74 +150,14 @@
           {{# } }}
           </div>
         </li> -->
-      <!-- {{# }); if(jieda.length === 0){ }}
-        <li class="fly-none">没有任何回答</li>
-      {{# } }} -->
-      <li data-id="" class="jieda-daan">
-          <a name="item-121212121212"></a>
-          <div class="detail-about detail-about-reply">
-            <a class="jie-user" href="">
-              <img src="../../res/images/avatar/default.png" alt="">
-              <cite>
-                <i>纸飞机</i>
-                <!-- <em>(楼主)</em>
-                <em style="color:#5FB878">(管理员)</em>
-                <em style="color:#FF9E3F">（活雷锋）</em>
-                <em style="color:#999">（该号已被封）</em> -->
-              </cite>
-            </a>
-            <div class="detail-hits">
-              <span>3分钟前</span>
-            </div>
-            <i class="iconfont icon-caina" title="最佳答案"></i>
-          </div>
-          <div class="detail-body jieda-body">
-            <p>么么哒</p>
-          </div>
-          <div class="jieda-reply">
-            <span class="jieda-zan zanok" type="zan"><i class="iconfont icon-zan"></i><em>12</em></span>
-            <span type="reply"><i class="iconfont icon-svgmoban53"></i>回复</span>
-            <!-- <div class="jieda-admin">
-              <span type="edit">编辑</span>
-              <span type="del">删除</span>
-              <span class="jieda-accept" type="accept">采纳</span>
-            </div> -->
-          </div>
-        </li>
-      <li data-id="13">
-          <a name="item-121212121212"></a>
-          <div class="detail-about detail-about-reply">
-            <a class="jie-user" href="">
-              <img src="../../res/images/avatar/default.png" alt="">
-              <cite>
-                <i>香菇</i>
-                <em style="color:#FF9E3F">活雷锋</em>
-              </cite>
-            </a>
-            <div class="detail-hits">
-              <span>刚刚</span>
-            </div>
-          </div>
-          <div class="detail-body jieda-body">
-            <p>蓝瘦</p>
-          </div>
-          <div class="jieda-reply">
-            <span class="jieda-zan" type="zan"><i class="iconfont icon-zan"></i><em>0</em></span>
-            <span type="reply"><i class="iconfont icon-svgmoban53"></i>回复</span>
-            <div class="jieda-admin">
-              <span type="edit">编辑</span>
-              <span type="del">删除</span>
-              <span class="jieda-accept" type="accept">采纳</span>
-            </div>
-          </div>
-        </li>
+
       </ul>
 
       <div class="layui-form layui-form-pane">
         <form action="" method="post">
           <div class="layui-form-item layui-form-text">
             <div class="layui-input-block">
-              <textarea id="L_content" name="reply_content" required lay-verify="required" placeholder="我要<% if(post[0].get('questionerId')==currentUser.get('id')){ %>自问自答<% }else{ %>回答<% } %>"  class="layui-textarea fly-editor" style="height: 150px;"></textarea>
+              <textarea id="reply_content" name="reply_content" required lay-verify="required" placeholder="我要<% if(post[0].get('questionerId')==currentUser.get('id')){ %>自问自答<% }else{ %>回答<% } %>"  class="layui-textarea fly-editor" style="height: 150px;"></textarea>
             </div>
           </div>
           <div class="layui-form-item">
@@ -250,6 +197,9 @@
 layui.cache.page = 'jie';
 layui.use(['layer','jquery','fly'],function(){
   var $ = layui.jquery, layer = layui.layer;
+  var fly = layui.fly;
+
+
   $.get(
     "/topic/mostVisits",
     function(data){
@@ -276,46 +226,39 @@ layui.use(['layer','jquery','fly'],function(){
     }
   )
 
-  $.post(
-    "/topic/getReply",
-    {
-      postId: '<%= post[0].get('objectId') %>'
-    },
-    function(data){
-      var length = data.length;
-      console.log(data);
-      for(var i=0;i<1;i++){
-        var string = '';
-        string += '<li data-id="14">';
-        string += '<a name=""></a>';
-        string += '<div class="detail-about detail-about-reply">';
-        string += '<a class="jie-user" href="">';
-        string += '<img src="../../res/images/avatar/default.png" alt="">';
-        string += '<cite><i>香菇</i><em style="color:#FF9E3F">活雷锋</em></cite></a>';
-        string += '<div class="detail-hits"><span>刚刚</span></div>';
-        string += '</div>';
-        string += '<div class="detail-body jieda-body"><p>蓝瘦</p></div>';
-        string += '<div class="jieda-reply">';
-        string += '<span class="jieda-zan" type="zan"><i class="iconfont icon-zan"></i><em>0</em></span>';
-        string += '<span type="reply"><i class="iconfont icon-svgmoban53"></i>回复</span>';
-        string += '<div class="jieda-admin">';
-        string += '<span type="edit">编辑</span>';
-        string += '<span type="del">删除</span>';
-        string += '<span class="jieda-accept" type="accept">采纳</span>';
-        string += '</div>';
-        string += '</div>';
-        string += '</li>';
-        $("#reply").append(string);
-      }
-    }
-  )
-
-
-    // var fly = layui.fly;
-    // $('.detail-body').each(function(){
-    //   var othis = $(this), html = othis.html();
-    //   othis.html(fly.content(html));
-    // });
+  // $.post(
+  //   "/topic/getReply",
+  //   {
+  //     postId: '<%= post[0].get('objectId') %>'
+  //   },
+  //   function(data){
+  //     var length = data.length;
+  //     console.log(data);
+  //     for(var i=0;i<1;i++){
+  //       var string = '';
+  //       string += '<li data-id="14">';
+  //       string += '<a name=""></a>';
+  //       string += '<div class="detail-about detail-about-reply">';
+  //       string += '<a class="jie-user" href="">';
+  //       string += '<img src="../../res/images/avatar/default.png" alt="">';
+  //       string += '<cite><i>香菇</i><em style="color:#FF9E3F">活雷锋</em></cite></a>';
+  //       string += '<div class="detail-hits"><span>刚刚</span></div>';
+  //       string += '</div>';
+  //       string += '<div class="detail-body jieda-body"><p>蓝瘦1</p></div>';
+  //       string += '<div class="jieda-reply">';
+  //       string += '<span class="jieda-zan" type="zan"><i class="iconfont icon-zan"></i><em>0</em></span>';
+  //       string += '<span type="reply"><i class="iconfont icon-svgmoban53"></i>回复</span>';
+  //       string += '<div class="jieda-admin">';
+  //       string += '<span type="edit">编辑</span>';
+  //       string += '<span type="del">删除</span>';
+  //       string += '<span class="jieda-accept" type="accept">采纳</span>';
+  //       string += '</div>';
+  //       string += '</div>';
+  //       string += '</li>';
+  //       $("#reply").append(string);
+  //     }
+  //   }
+  // )
 
 
   $('#replyButton').click(function(){
@@ -340,6 +283,10 @@ layui.use(['layer','jquery','fly'],function(){
     );
   });
 
+  $('.detail-body').each(function(){
+    var othis = $(this), html = othis.html();
+    othis.html(fly.content(html));
+  });
 
 });
 </script>
